[package]
name = "measure-theory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/measure-theory"
description = "Measure theory in Rust — Lebesgue measure, Lebesgue integral, L^p spaces, convergence theorems, sigma-algebras"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
